re-add minified vexflow version

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ body {
   color: white;
 }
 </style>
-<script src="vexflow.js"></script>
+<script src="vexflow-min.js"></script>
 </head>
 
 <body>
