--- a/index.html
+++ b/index.html
@@ -85,6 +85,104 @@ body {
 <body>
 
 <div class="score-wrapper" id="score-wrapper">
+<svg class="score" id="score" width="500" height="250">
+<g id="vexflow-wrapper"></g>
+
+<g transform="translate(382 120)">
+
+<g transform="translate(0 -80)">
+<path d="M-15,0l38,0" stroke="#000000" fill="none"/>
+<circle r="9" fill="#eeeeee"/>
+<text dy="5" text-anchor="middle" font-family="sans-serif" font-size="14">C</text>
+</g>
+
+<g transform="translate(18 -70)">
+<circle r="9" fill="#eeeeee"/>
+<text dy="5" text-anchor="middle" font-family="sans-serif" font-size="14">B</text>
+</g>
+
+<g transform="translate(0 -60)">
+<path d="M-15,0l38,0" stroke="#000000" fill="none"/>
+<circle r="9" fill="#eeeeee"/>
+<text dy="5" text-anchor="middle" font-family="sans-serif" font-size="14">A</text>
+</g>
+
+<g transform="translate(18 -50)">
+<circle r="9" fill="#eeeeee"/>
+<text dy="5" text-anchor="middle" font-family="sans-serif" font-size="14">G</text>
+</g>
+
+<g transform="translate(0 -40)">
+<circle r="9" fill="#eeeeee"/>
+<text dy="5" text-anchor="middle" font-family="sans-serif" font-size="14">F</text>
+</g>
+
+<g transform="translate(18 -30)">
+<circle r="9" fill="#eeeeee"/>
+<text dy="5" text-anchor="middle" font-family="sans-serif" font-size="14">E</text>
+</g>
+
+<g transform="translate(0 -20)">
+<circle r="9" fill="#eeeeee"/>
+<text dy="5" text-anchor="middle" font-family="sans-serif" font-size="14">D</text>
+</g>
+
+<g transform="translate(18 -10)">
+<circle r="9" fill="#eeeeee"/>
+<text dy="5" text-anchor="middle" font-family="sans-serif" font-size="14">C</text>
+</g>
+
+<g transform="translate(0 0)">
+<circle r="9" fill="#eeeeee"/>
+<text dy="5" text-anchor="middle" font-family="sans-serif" font-size="14">B</text>
+</g>
+
+<g transform="translate(18 10)">
+<circle r="9" fill="#eeeeee"/>
+<text dy="5" text-anchor="middle" font-family="sans-serif" font-size="14">A</text>
+</g>
+
+<g transform="translate(0 20)">
+<circle r="9" fill="#eeeeee"/>
+<text dy="5" text-anchor="middle" font-family="sans-serif" font-size="14">G</text>
+</g>
+
+<g transform="translate(18 30)">
+<circle r="9" fill="#eeeeee"/>
+<text dy="5" text-anchor="middle" font-family="sans-serif" font-size="14">F</text>
+</g>
+
+<g transform="translate(0 40)">
+<circle r="9" fill="#eeeeee"/>
+<text dy="5" text-anchor="middle" font-family="sans-serif" font-size="14">E</text>
+</g>
+
+<g transform="translate(18 50)">
+<circle r="9" fill="#eeeeee"/>
+<text dy="5" text-anchor="middle" font-family="sans-serif" font-size="14">D</text>
+</g>
+
+<g transform="translate(0 60)">
+<path d="M-15,0l38,0" stroke="#000000" fill="none"/>
+<circle r="9" fill="#eeeeee"/>
+<text dy="5" text-anchor="middle" font-family="sans-serif" font-size="14">C</text>
+</g>
+
+<g transform="translate(18 70)">
+<circle r="9" fill="#eeeeee"/>
+<text dy="5" text-anchor="middle" font-family="sans-serif" font-size="14">B</text>
+</g>
+
+<g transform="translate(0 80)">
+<path d="M-15,0l38,0" stroke="#000000" fill="none"/>
+<circle r="9" fill="#eeeeee"/>
+<text dy="5" text-anchor="middle" font-family="sans-serif" font-size="14">A</text>
+</g>
+
+
+</g>
+
+</svg>
 </div>
 
 <div class="stats-wrapper">
@@ -282,7 +380,7 @@ document.getElementById("button-reset").addEventListener("click", reset);
 
 VF = Vex.Flow;
 
-var renderer = new VF.Renderer(document.getElementById("score-wrapper"), VF.Renderer.Backends.SVG);
+var renderer = new VF.Renderer(document.getElementById("vexflow-wrapper"), VF.Renderer.Backends.SVG);
 
 renderer.resize(500, 250);
 var context = renderer.getContext();
